feat: remove admin drivers, add admin vehicles

--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-home.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-home.html
@@ -1,10 +1,10 @@
 <mat-drawer-container class="w-full h-full">
-  <mat-drawer mode="side" opened class="pt-4">
+  <mat-drawer mode="side" opened class="pt-4 min-w-48">
     <div class="flex flex-col items-center justify-center space-y-4 px-8">
       @for (tab of tabs; track tab.routerLink) {
         <div matRipple class="flex w-full items-center space-x-4 cursor-pointer rounded-lg" (click)="changeTab(tab.routerLink)">
           <mat-icon>{{ tab.icon }}</mat-icon>
-          <div class="text-2xl">{{ tab.title }}</div>
+          <div class="text-xl">{{ tab.title }}</div>
         </div>
       }
     </div>
