--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="w-full h-full">
-  <mat-drawer mode="side" opened class="pt-2 py-2">
+  <mat-drawer mode="side" opened class="pt-2 py-2 min-w-64">
     <div class="p-2 space-y-2">
       @if (users(); as users) {
         <div class="flex items-center pb-4">
