feat: update admin pages

--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-pricing/admin-pricing.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-pricing/admin-pricing.html
@@ -2,8 +2,9 @@
   <mat-drawer mode="side" opened class="pt-2 py-2 min-w-64">
     <div class="p-2 space-y-2">
       @if (vehicleTypes(); as vehicleTypes) {
-        <div class="flex items-center pb-4">
-          <app-value-input-string [label]="'Search'"/>
+        <div class="flex items-center space-x-4 pb-4">
+          <app-value-input-string class="w-44" [label]="'Search'"/>
+          <mat-icon class="cursor-pointer scale-150" (click)="addVehicleType()">add_circle</mat-icon>
         </div>
         @for (vehicleType of vehicleTypes; track vehicleType) {
           @if (vehicleType.id === selectedVehicleType()?.id) {
@@ -30,8 +31,10 @@
       <mat-card appearance="outlined" class="">
         <mat-card-title class="p-4">
           <div class="flex justify-between items-center">
-            <div class="font-medium text-xl">Pricing</div>
-            <mat-icon class="cursor-pointer">save</mat-icon>
+            <div class="font-medium text-xl">Vehicle type</div>
+            <div class="flex space-x-4">
+              <mat-icon class="cursor-pointer" (click)="savePrice()">save</mat-icon>
+            </div>
           </div>
         </mat-card-title>
         <mat-divider/>
