--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-vehicles/admin-vehicles.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-vehicles/admin-vehicles.html
@@ -2,8 +2,9 @@
   <mat-drawer mode="side" opened class="pt-2 py-2 min-w-64">
     <div class="p-2 space-y-2">
       @if (vehicles(); as vehicles) {
-        <div class="flex justify-center items-center pb-4">
-          <app-value-input-string [label]="'Search'"/>
+        <div class="flex items-center space-x-4 pb-4">
+          <app-value-input-string class="w-44" [label]="'Search'"/>
+          <mat-icon class="cursor-pointer scale-150" (click)="addVehicle()">add_circle</mat-icon>
         </div>
         @for (vehicle of vehicles; track vehicle) {
           @if (vehicle.id === selectedVehicle()?.id) {
@@ -31,7 +32,10 @@
         <mat-card-title class="p-4">
           <div class="flex justify-between items-center">
             <div class="font-medium text-xl">Vehicle</div>
-            <mat-icon class="cursor-pointer">save</mat-icon>
+            <div class="flex space-x-4">
+              <mat-icon class="cursor-pointer" (click)="saveVehicle()">save</mat-icon>
+              <mat-icon class="cursor-pointer" (click)="deleteVehicle()">delete</mat-icon>
+            </div>
           </div>
         </mat-card-title>
         <mat-divider/>
