feat: add dialogs, move prices and pricing to VehicleType, update vehicle type to work with prices;

--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-pricing/admin-pricing.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-pricing/admin-pricing.html
@@ -22,7 +22,7 @@
           }
         }
       } @else {
-        <div>No vehicles found yet</div>
+        <div>No vehicle types found yet</div>
       }
     </div>
   </mat-drawer>
@@ -46,7 +46,7 @@
         </mat-card-content>
       </mat-card>
     } @else {
-      <div class="text-center text-xl">Vehicle not selected</div>
+      <div class="text-center text-xl">Vehicle type not selected</div>
     }
   </mat-drawer-content>
 </mat-drawer-container>
