--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-vehicles/admin-vehicles-dialog/admin-vehicles-dialog.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-vehicles/admin-vehicles-dialog/admin-vehicles-dialog.html
@@ -1,5 +1,5 @@
 <form class="flex flex-col flex-auto gap-y-8 p-4 dialog-content" (submit)="submit(); $event.preventDefault()">
-  <div class="text-lg">Add user</div>
+  <div class="text-lg">Add vehicle</div>
   <div class="flex flex-col flex-auto gap-y-4">
 
   </div>
