feat: update admin users and vehicles pages, make forms work

--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-pricing/admin-pricing.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-pricing/admin-pricing.html
@@ -22,7 +22,7 @@
           }
         }
       } @else {
-        <div>No vehicle types found yet</div>
+        <div class="text-center text-xl">No vehicle types found yet</div>
       }
     </div>
   </mat-drawer>
