--- a/voom-fe/src/app/main-shell/user-pages/home/home.html
+++ b/voom-fe/src/app/main-shell/user-pages/home/home.html
@@ -8,6 +8,18 @@
     ></app-map>
   </div>
 
+  @if(isLocked) {
+  <div class="w-full flex justify-center mb-6">
+    <button
+      matButton="outlined"
+      class="px-6"
+      (click)="ridePage()"
+    >
+      View Ride Status
+    </button>
+  </div>
+  }
+
   <section class="flex flex-col items-center w-full px-4 sm:px-6">
     <form class="w-full max-w-[1200px] bg-white rounded-2xl p-4 sm:p-6 md:p-8" [formGroup]="rideForm">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-y-6 md:gap-x-6 items-center">
