--- a/voom-fe/src/app/main-shell/driver-pages/ride-history/driver-ride-history.html
+++ b/voom-fe/src/app/main-shell/driver-pages/ride-history/driver-ride-history.html
@@ -1,7 +1,5 @@
 <section class="max-w-[1200px] md:p-10 p-5 ml-auto mr-auto">
-  <div
-    class="w-full flex md:flex-row flex-col md:gap-[0px] gap-[20px] justify-between mb-[50px] items-center"
-  >
+  <div class="w-full flex md:flex-row flex-col md:gap-[0px] gap-[20px] justify-between mb-[50px] items-center">
     <h1 class="text-2xl font-medium">Your Activity</h1>
     <div class="flex md:flex-row flex-col gap-[20px]">
       <app-value-input-date label="From" [formControl]="fromDate"></app-value-input-date>
@@ -17,17 +15,23 @@
       <mat-icon>sort</mat-icon>
     </button>
   </div>
+
   <div class="w-full rounded-4xl h-[3px] bg-primary mb-[50px]"></div>
-  @for(date of dates; track date) {
+
+  @for(date of dates(); track date.getTime()) {
   <div class="w-full flex flex-col items-start gap-[10px] mb-[50px]">
     <h1 class="text-xl mb-[10px]">{{ date.toDateString() }}</h1>
     <div class="w-full flex flex-col gap-[15px]">
-      @for (ride of RIDE_DATA; track ride) { @if(ride.date.getTime() === date.getTime()) {
-      <app-ride-accordion [ride]="ride"></app-ride-accordion>
-      } }
+      
+      @for (ride of getRidesForDate(date); track ride.id) {
+        <app-ride-accordion [ride]="ride"></app-ride-accordion>
+      }
+
     </div>
   </div>
-  } @if(dates.length === 0) {
-  <p class="text-xl text-center text-gray-500">No rides found.</p>
+  } 
+
+  @if(dates().length === 0) {
+    <p class="text-xl text-center text-gray-500">No rides found.</p>
   }
 </section>
