--- a/voom-fe/src/app/main-shell/driver-pages/ride-history/ride-accordion/ride-accordion.html
+++ b/voom-fe/src/app/main-shell/driver-pages/ride-history/ride-accordion/ride-accordion.html
@@ -6,14 +6,14 @@
           class="grid grid-cols-[2fr_4fr_2fr] w-full place-items-center md:gap-[20px] gap-[10px]"
         >
           <div class="flex items-center md:gap-[10px] gap-[5px] justify-self-start">
-            <img src="/src/assets/icons/free%20driver.png" alt="" class="w-[30px] h-[30px]" />
+            <img src="assets/icons/free driver.png" alt="" class="w-[30px] h-[30px]" />
             <p class="md:text-left text-center">{{ orderedPassengerName }}</p>
           </div>
           <div class="md:justify-self-start justify-self-center">
-            <p class="text-center md:text-left">{{`${ride.source}   →   ${ride.destination}`}}</p>
+            <p class="text-center md:text-left">{{`${ride.rideRequest.rideRoute.routePoints[0].address}   →   ${ride.rideRequest.rideRoute.routePoints[1].address}`}}</p>
           </div>
           <div class="justify-self-end ml-auto">
-            <p>{{ `${ride.startTime} - ${ride.endTime}` }}</p>
+            <p>{{ `${ride.startedAt.split('T')[1].substring(0, 5)} - ${ride.finishedAt.split('T')[1].substring(0, 5)}` }}</p>
           </div>
         </div>
       </mat-panel-title>
@@ -22,10 +22,10 @@
       <div class="w-full h-[3px] rounded-4xl bg-primary mb-[15px] mt-[10px]"></div>
       <div class="flex gap-[50px]">
         <div class="min-w-[180px]">
-          <p><b class="color-blue">Distance: </b>5km</p>
-          <p><b class="color-blue">Price: </b>{{ `${ride.price}` }}</p>
+          <p><b class="color-blue">Distance: </b>{{ ride.rideRequest.rideRoute.totalDistanceKm }} km</p>
+          <p><b class="color-blue">Price: </b>{{ `${ride.rideRequest.calculatedPrice}` }}</p>
           <p><b class="color-blue">Status: </b>{{ `${ride.status}` }}</p>
-          <p><b class="color-blue">Panic: </b>{{ `${ride.panic ? '✔️' : '✖️'}` }}</p>
+          <p><b class="color-blue">Panic: </b>{{ `${ride.status === 'PANIC' ? '✔️' : '✖️'}` }}</p>
         </div>
         <div class="w-full">
           <p class="mb-[10px]">Passengers</p>
@@ -34,11 +34,16 @@
           >
             @for(passenger of ride.passengers; track passenger) {
             <div class="flex items-center md:gap-[10px] gap-[2px] justify-self-start mb-[10px]">
-              <img src="/src/assets/icons/free%20driver.png" alt="" class="w-[30px] h-[30px]" />
+              <img src="assets/icons/free driver.png" alt="" class="w-[30px] h-[30px]" />
               <p class="md:text-left text-center">
-                {{ `${passenger.name} ${passenger.lastname}` }}
+                {{ `${passenger.person.firstName} ${passenger.person.lastName}` }}
               </p>
             </div>
+            }
+            @if (ride.passengers.length === 0) {
+              <div class="flex items-center md:gap-[10px] gap-[2px] justify-self-start mb-[10px]">
+                <p class="text-gray-500">No additional passengers.</p>
+              </div>
             }
           </div>
         </div>
