--- a/voom-fe/src/app/unauthenticated/home/home.html
+++ b/voom-fe/src/app/unauthenticated/home/home.html
@@ -1,16 +1,16 @@
 <app-header/>
 <div class="p-8 rounded-3xl">
-  <app-map/>
+  <app-map
+    (mapClick)="onMapClick($event)"
+  ></app-map>
 </div>
 <section class="flex flex-col items-center w-full">
-  <form class="flex max-w-[1200px] w-full ml-auto mr-auto justify-between items-center">
+  <form class="flex max-w-[1200px] w-full ml-auto mr-auto justify-center items-center">
     <app-value-input-string label="Pickup Location"></app-value-input-string>
     <app-value-input-string label="Dropoff Location"></app-value-input-string>
-    <app-dropdown label="Vehicle Type" [options]="vehicleOptions" [(selected)]="selectedVehicle"> </app-dropdown>
-    <app-dropdown label="Time" [options]="timeOptions" [(selected)]="selectedTime"> </app-dropdown>
   </form>
   <p class="text-center text-lg py-8">Enter pickup, dropoff and type to see your estimate.</p>
-  <button matButton="filled" routerLink="/login">Sign in to Confirm Ride</button>
+  <button matButton="filled" [disabled]="this.routePoints().length < 2" (click)="getEstimate()">See estimate</button>
 </section>
 <section
   class="how-it-works grid grid-cols-2 p-20 max-w-[1200px] mr-auto ml-auto content-center place-items-center"
