--- a/voom-fe/src/app/unauthenticated/home/home.html
+++ b/voom-fe/src/app/unauthenticated/home/home.html
@@ -3,15 +3,42 @@
   <app-map
     [points]="this.routePoints()"
     (mapClick)="onMapClick($event)"
+    (cleared)="onMapCleared()"
   ></app-map>
 </div>
 <section class="flex flex-col items-center w-full">
   <form [formGroup]="rideForm" class="flex space-x-4 w-full ml-auto mr-auto justify-center items-center">
     <app-value-input-string label="Pickup Location" formControlName="pickup"></app-value-input-string>
     <app-value-input-string label="Dropoff Location" formControlName="dropoff"></app-value-input-string>
+    <button matButton="outlined" (click)="onMapCleared()">Clear</button>
   </form>
 </section>
 @if (rideEstimation(); as rideEstimation) {
+  <div class="flex flex-col justify-center  items-center w-full pt-8 space-y-4 px-8">
+  <h4 class="text-center text-lg">Additional Pitstops</h4>
+  <div class="flex gap-3 justify-center  flex-wrap">
+    @for (p of pitstopsView(); track p.id) {
+      <div class="flex items-center justify-center gap-2 text-sm bg-gray-100 rounded-full px-3 py-1">
+        <span class="text-red-500 text-xs">●</span>
+        <span class="truncate max-w-[220px]">{{ p.cleanAddress }}</span>
+        <button
+          type="button"
+          class="w-5 h-5 rounded-full text-gray-500 hover:text-red-600 hover:bg-red-100"
+          (click)="removePoint(p.id)"
+        >
+          ✕
+        </button>
+        <button
+          type="button"
+          class="text-blue-600 text-xs hover:underline"
+          (click)="setAsDropoff(p.id)"
+        >
+          Set as destination
+        </button>
+      </div>
+    }
+  </div>
+</div>
 <div class="flex flex-col items-center w-full space-y-4 py-8">
   <div class="text-center text-lg">Ride Estimate</div>
   <div class="flex justify-center items-center space-x-8">
