feat: update arrival dialog, ride api and driver home

--- a/voom-fe/src/app/main-shell/driver-pages/arrival-dialog/arrival-dialog.html
+++ b/voom-fe/src/app/main-shell/driver-pages/arrival-dialog/arrival-dialog.html
@@ -15,9 +15,9 @@
       Start the ride if all passengers have entered the vehicle.
     </p>
 
-    @if (data?.pickupAddress) {
+    @if (data.pickupAddress) {
       <p class="text-sm text-gray-500 italic">
-        {{ data?.pickupAddress }}
+        {{ data.pickupAddress }}
       </p>
     }
     <mat-dialog-actions
