--- a/voom-app/app/src/main/res/layout/driver_info_window.xml
+++ b/voom-app/app/src/main/res/layout/driver_info_window.xml
@@ -1,7 +1,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:padding="8dp"
+    android:padding="12dp"
     android:background="@drawable/bg_driver_info"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -9,15 +9,16 @@
     <TextView
         android:id="@+id/tv_driver_name"
         android:textStyle="bold"
+        android:textSize="16sp"
         android:textColor="@android:color/black"
-        android:textSize="14sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tv_driver_status"
-        android:textSize="12sp"
-        android:textColor="#666"
+        android:textSize="14sp"
+        android:textColor="@android:color/darker_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
 </LinearLayout>
