--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-live/admin-live.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-live/admin-live.html
@@ -1,12 +1,14 @@
 <div class="p-4 flex flex-col justify-center">
-  <app-map/>
+  <app-map
+    [points]="this.routePoints()"
+  ></app-map>
   <div class="flex justify-end py-4">
     <mat-card appearance="outlined" class="px-8 py-2 cursor-pointer" (click)="openSupportChat()">
       <div>Live Support</div>
     </mat-card>
   </div>
 </div>
-@if (isOpen()) {
+@if (isSupportChatOpen()) {
   <div class="support-chat-container">
     <app-admin-support-chat/>
   </div>
