--- a/voom-fe/src/app/shared/header/header.html
+++ b/voom-fe/src/app/shared/header/header.html
@@ -7,6 +7,7 @@
     @if (isAuthenticated()) {
       @if (user(); as user) {
         @if (user.role === 'USER') {
+          <button mat-button (click)="scheduledRides()">Scheduled Rides</button>
           <button mat-button (click)="favoriteRoutes()">Favorite Routes</button>
         }
         @if (user.role === 'USER' || user.role === 'DRIVER') {
