feat: update pages and add validation
Signed-off-by: Maksim Vasic <vasicmaksim4@gmail.com>

--- a/voom-fe/src/app/unauthenticated/login/reset-password/reset-password.html
+++ b/voom-fe/src/app/unauthenticated/login/reset-password/reset-password.html
@@ -8,7 +8,7 @@
       <div class="flex flex-col space-y-8">
         <app-value-input-string [label]="'Password'" [formControl]="form.controls.password1" [hide]="true"/>
         <app-value-input-string [label]="'Repeat password'" [formControl]="form.controls.password2" [hide]="true"/>
-        <button matButton="filled" [disabled]="form.invalid" (click)="submit()">Continue</button>
+        <button matButton="filled" [disabled]="form.invalid || form.controls.password1.value !== form.controls.password2.value" (click)="submit()">Continue</button>
       </div>
     </div>
   </div>
