scheduled rides overview driver frontend

--- a/voom-fe/src/app/shared/header/header.html
+++ b/voom-fe/src/app/shared/header/header.html
@@ -11,6 +11,7 @@
           <button mat-button (click)="favoriteRoutes()">Favorite Routes</button>
         }
         @if (user.role === 'USER' || user.role === 'DRIVER') {
+          <button mat-button (click)="scheduledRidesDriver()">Scheduled Rides</button>
           <button mat-button (click)="rideHistory()">Ride History</button>
         }
         <button mat-button (click)="signOut()">Sign Out</button>
