feat: update activity, update activity map, update favorite routes,

--- a/voom-fe/src/app/main-shell/user-pages/scheduled-rides/scheduled-rides.html
+++ b/voom-fe/src/app/main-shell/user-pages/scheduled-rides/scheduled-rides.html
@@ -1,5 +1,5 @@
-<div class="p-4 px-32">
-  <div class="flex justify-between items-center">
+<div class="px-16 py-4">
+<div class="flex justify-between items-center">
     <div class="font-medium text-2xl">Scheduled Rides</div>
   </div>
   <div class="py-8 space-y-4 flex flex-col">
