--- a/voom-app/app/src/main/res/values/styles.xml
+++ b/voom-app/app/src/main/res/values/styles.xml
@@ -9,5 +9,11 @@
         <item name="boxStrokeColor">@color/primary</item>
     </style>
 
+    <style name="InfoText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginBottom">12dp</item>
+    </style>
+
+
 
 </resources>
