--- a/voom-app/app/src/main/res/layout/fragment_user_home.xml
+++ b/voom-app/app/src/main/res/layout/fragment_user_home.xml
@@ -211,6 +211,7 @@
                 android:weightSum="2">
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_add_favorite"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
