feat: Favorite routes fragment.

--- a/voom-app/app/src/main/res/layout/fragment_user_home.xml
+++ b/voom-app/app/src/main/res/layout/fragment_user_home.xml
@@ -218,6 +218,7 @@
                     android:text="Add to favorites"/>
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_choose_favorite"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
