--- a/voom-app/app/src/main/res/values/colors.xml
+++ b/voom-app/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
     <color name="gray_600">#4B5563</color>>
+    <color name="card_stroke">#E0E0E0</color>
 </resources>
