--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-activity/admin-activity.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-activity/admin-activity.html
@@ -15,7 +15,11 @@
             <mat-expansion-panel-header>
               <mat-panel-title class="flex items-center justify-between">
                 <div class="flex items-center space-x-4">
-                  <div class="text-lg font-normal">{{ getParsedTime(ride.startedAt)}} - {{ getParsedTime(ride.finishedAt) }}</div>
+                  @if (ride.status === 'SCHEDULED' || ride.status === 'USER_CANCELLED' || ride.status === 'DRIVER_CANCELLED') {
+                    <div class="text-lg font-normal">{{ getParsedTime(ride.rideRequest.scheduledTime)}}</div>
+                  } @else {
+                    <div class="text-lg font-normal">{{ getParsedTime(ride.startedAt)}} - {{ getParsedTime(ride.finishedAt) }}</div>
+                  }
                 </div>
                 <div class="flex items-center space-x-4">
                   @for (routePoint of ride.rideRoute.routePoints; track $index) {
@@ -41,9 +45,13 @@
                 <div class="text-lg font-normal">Vehicle type:</div>
                 <div class="text-lg font-normal">{{ ride.rideRequest.vehicleType.type.toLowerCase() }}</div>
               </div>
-              <div class="flex items-center justify-center space-x-2">
+              <div class="flex flex-col items-center justify-center space-x-2">
                 <div class="text-lg font-normal">Status:</div>
                 <div class="text-lg font-normal">{{ ride.status.toLowerCase() }}</div>
+                @if (ride.status.toLowerCase() === 'user_cancelled') {
+                  <div class="text-lg font-normal">User: {{ ride.cancelledBy!.email }}</div>
+                  <div class="text-lg font-normal">Reason: {{ ride.rideRequest.reason }}</div>
+                }
               </div>
               <div class="flex items-center justify-center space-x-2">
                 <div class="text-lg font-normal">Pet transport:</div>
